*SVN*

* Update add_index documentation to use new options api. Closes #9787 [kamal]

* Allow find on a has_many association defined with :finder_sql to accept id arguments as strings like regular find does. Closes #9916 [krishna]

* Use VALID_FIND_OPTIONS when resolving :find scoping rather than hard coding the list of valid find options. Closes #9443 [sur]

* Limited eager loading no longer ignores scoped :order. Closes #9561 [danger, josh]

* Assigning an instance of a foreign class to a composed_of aggregate calls an optional conversion block. Refactor and simplify composed_of implementation.  #6322 [brandon, Chris Cruft]

* Assigning nil to a composed_of aggregate also sets its immediate value to nil.  #9843 [Chris Cruft]

* Ensure that mysql quotes table names with database names correctly.  Closes #9911 [crayz]

  "foo.bar" => "`foo`.`bar`"  

* Complete the assimilation of Sexy Migrations from ErrFree [Chris Wanstrath, PJ Hyett]
	http://errtheblog.com/post/2381

* Qualified column names work in hash conditions, like :conditions => { 'comments.created_at' => ... }.  #9733 [danger]

* Fix regression where the association would not construct new finder SQL on save causing bogus queries for "WHERE owner_id = NULL" even after owner was saved.  #8713 [Bryan Helmkamp]

* Refactor association create and build so before & after callbacks behave consistently.  #8854 [lifofifo, mortent]

* Quote table names. Defaults to column quoting.  #4593 [Justin Lynn, gwcoffey, eadz, Dmitry V. Sabanin, Jeremy Kemper]

* Alias association #build to #new so it behaves predictably.  #8787 [lifofifo]

* Add notes to documentation regarding attr_readonly behavior with counter caches and polymorphic associations.  Closes #9835 [saimonmoore, rick]

* Observers can observe model names as symbols properly now.  Closes #9869  [queso]

* find_and_(initialize|create)_by methods can now properly initialize protected attributes [Tobias Luetke]
